--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ad88676",
    "metadata": {},
    "source": [
     "# Day 2 Homework"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d1c608",
    "metadata": {},
    "source": [
     "1. Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set. Do the mean calculation manually, and then use the built-in functions provided in the **statistics** module for the others.\n",
@@ -21,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3658bc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e497362",
    "metadata": {},
    "source": [
     "From *my_samples* above, print out the following:\n",
@@ -52,32 +48,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d98cd07a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "597a7521",
    "metadata": {},
    "source": [
     "2. You are given a sample of a DNA plasmid with a known concentration of 1.85ug/uL and a length of 1,354 bases, and are asked to calculate the molarity of the sample. \n",
     "\n",
-    "  * Create a function to calculate the molarity of a double-stranded DNA molecule given this information. (Google is your friend here to find the formula)."
+    "  * Create a function to calculate the molarity of a double-stranded DNA molecule given this information. (Google is your friend here to find the formula and the molecular weight for an 'average' oligonucleotide base pair)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ccb6a88",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d92222f4",
    "metadata": {},
    "source": [
     "  * You receive another plasmid with a length of 2,500 bases. You make a series of 10 dilutions ranging from 0-10ug/ul. Construct a loop to calculate the molarity of each dilution. (hint: help(range))"
@@ -85,7 +77,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c96c72b",
    "metadata": {},
    "source": [
     "3. Using either a for loop or a list comprehension approach, translate the following formulae and solve for the indicated range of values\n",
@@ -96,14 +87,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5db4739",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ae5bcf2e",
    "metadata": {},
    "source": [
     "* $2^x$ for all even numbers between 0 and 20"
@@ -112,14 +101,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28360bc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "84a64e5a",
    "metadata": {},
    "source": [
     "* $3x^4-2x^3+17x$ for $x:\\{1 ... 200\\}$"
@@ -128,14 +115,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95e04a29",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5dce1523",
    "metadata": {},
    "source": [
     "4. Solve the following equation for $x$:\n",
@@ -146,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92267711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aae5727",
    "metadata": {},
    "source": [
     "_Bonus points: What is the name of this formula and what does it describe?_"
@@ -171,7 +154,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "570dd16b",
    "metadata": {},
    "source": []
   }
@@ -195,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
