--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -49,13 +49,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "python"
+    "```\n",
+    "$ python\n",
+    "```"
    ]
   },
   {
@@ -83,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,21 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "You are now leaving help and returning to the Python interpreter.\n",
-      "If you want to ask for help on a particular object directly from the\n",
-      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
-      "has the same effect as typing a particular string at the help> prompt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help()"
    ]
@@ -117,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help('+')"
+    "help(print)"
    ]
   },
   {
@@ -231,18 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "print(type(x))\n",
@@ -259,20 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = float(4)\n",
     "x"
@@ -445,23 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e\n",
-      "nomi\n",
-      "is fu\n",
-      "Genomics\n",
-      "is fun\n",
-      "Gnmc sfn\n",
-      "nuf si scimoneG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a string literal and store in a variable\n",
     "a = \"Genomics is fun\"\n",
@@ -503,21 +463,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "genomics is fun\n",
-      "My favorite gene is Pantr2.\n",
-      "Genomics is hard\n",
-      "['Genomics', 'is', 'fun']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the length of the string\n",
     "print(len(a))\n",
@@ -547,20 +495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"She sells seashells by the seashore.\"\n",
     "x = \"sea\" in a\n",
@@ -651,19 +588,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(14 > 3)\n",
     "print(14 == 3)\n",
@@ -873,9 +800,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gapdh', 'Sox10', 'Cxcl1', 'Msi1', 'Foxp1']\n",
+      "['Gapdh', 'Sox10', 'Cxcl1', 'Msi1']\n",
+      "['Cxcl1', 'Gapdh', 'Msi1', 'Sox10']\n"
+     ]
+    }
+   ],
    "source": [
     "genes.remove('Mef2c') # removes a 'specific' item\n",
     "print(genes)\n",
@@ -883,6 +820,31 @@
     "genes.pop() # removes a specified index position or the last item in the list if index is not specified.\n",
     "print(genes)\n",
     "\n",
+    "genes.sort()\n",
+    "print(genes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can clear the contents of the entire list by using the `clear()` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
     "genes.clear() # empties the entire list\n",
     "print(genes)"
    ]
@@ -896,17 +858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'banana', 'pear', 'carrot', 'celery', 'potato']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruit = ['apple', 'banana','pear']\n",
     "veg = ['carrot','celery','potato']\n",
@@ -932,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,31 +921,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sox2\n",
-      "chr4\n",
-      "1589182\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for val in a:\n",
     "    print(val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Exercise\n",
-    "\n",
-    "<span style=\"color:red\">TODO: </span> add an exercise here?"
    ]
   },
   {
@@ -1127,7 +1062,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries are useful for storing information about an item or object. We can also start to build out collections of collections to help us keep more organized"
+    "#### Exercise\n",
+    "1. Given the dictionary below, write a script to return the keys in (sorted) alphanumeric order.\n",
+    "\n",
+    "2. Do the same but for the values in the dictionary instead of the keys.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sydf', 'javd', 'sfoj', 'ihes', 'agsj', 'bhds']\n",
+      "['agsj', 'bhds', 'ihes', 'javd', 'sfoj', 'sydf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myDict = {'sydf': 124,\n",
+    "          'javd': 8927,\n",
+    "          'sfoj': 258,\n",
+    "          'ihes': 753,\n",
+    "          'agsj': 682,\n",
+    "          'bhds': 257\n",
+    "         }\n",
+    "\n"
    ]
   },
   {
