Updating Day1 & Day2 notebooks for 2022

--- a/day2/assignments/Day2-Lunch_Python.ipynb
+++ b/day2/assignments/Day2-Lunch_Python.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "Create a dictionary that holds the following info about you:\n",
     "- First Name\n",
-    "- Graduate school\n",
+    "- Undergraduate school\n",
     "- Graduate program\n",
     "- Favorite model organism\n",
     "\n",
@@ -47,7 +47,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new string holding your model organsism with the string \"is my favorite organism\" appended. Then update your dictionary."
+    "Create a new string stating your model organsism with the phrase \"is my favorite organism\" appended."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Update your dictionary to include a new k:v pair with the name of your favorite gene."
    ]
   },
   {
@@ -128,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
