--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -1333,7 +1333,7 @@
    "hash": "f830f5482817da8c94e7b92359ddd59f62b3b721ee2e7f2ba7b076c4827b6548"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1347,7 +1347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
