Updates to day2 notebooks.

--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -28,9 +28,13 @@
     "solutions = []\n",
     "for x in range(10):\n",
     "    solutions.append(5*x)\n",
+    "\n",
+    "print(solutions)\n",
     "     \n",
     "# List comprehension version\n",
-    "solutions = [5*x for x in range(10)] # More concise, and faster!"
+    "solutions = [5*x for x in range(10)] # More concise, and faster!\n",
+    "\n",
+    "print(solutions)"
    ]
   },
   {
@@ -99,13 +103,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Folks = [(\"Jared\",\"Human Genetics\",\"student\"),\n",
-    "(\"Norah\", \"BCMB\",\"student\"),\n",
-    "(\"Loyal\", \"DGM\",\"professor\")]\n",
+    "Folks = [\n",
+    "(\"Luke\", \"BME\", \"student\"),\n",
+    "(\"Sheridan\", \"Neuroscience\", \"student\"),\n",
+    "(\"Loyal\", \"Neuroscience\", \"professor\"),\n",
+    "(\"Winston\", \"BME\", \"professor\")\n",
+    "]\n",
     "\n",
     "[x[1] for x in Folks] ## access the second element in each tuple\n",
     "\n",
-    "## Use list comprehension and fstring formating to write a sentence about each person using the info above.\n",
+    "## Use list comprehension and fstring formating to write a sentence about each person using the info above and print it to the output cell.\n",
     "??\n",
     "\n"
    ]
@@ -649,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
