--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -21,7 +21,7 @@
     "There are numerous programming languages from which to choose.  Many of them specialized for specific types of tasks. Python, like others, is a general purpose and high-level programming language and can be used for a variety of applications. There are a few reasons however why you might choose to work in python:\n",
     "\n",
     "### Code readability and maintenance\n",
-    "Python syntax and formatting emphasizes code readability. In many cases, python code often reads as english sentences instead of quirky syntax. This makes it a useful language to learn as a first language, but also helps others quickly interpret what is actually happening in your code. This helps with mainintaining old code as well and makes updating and sharing materials easier.\n",
+    "Python syntax and formatting emphasizes code readability. In many cases, python code often reads close to english sentences instead of quirky syntax. This makes it a useful language to learn as a first language, but also helps others quickly interpret what is actually happening in your code. This helps with mainintaining old code as well and makes updating and sharing materials easier.\n",
     "\n",
     "### Compatibility\n",
     "Python supports many operating systems natively.  Meaning your python code can be readily ported across systems with little to no effort. \n",
@@ -148,7 +148,7 @@
    "source": [
     "a = 2\n",
     "b = 3\n",
-    "a+b"
+    "print(a+b)"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "source": [
     "a = '2'\n",
     "b = '3'\n",
-    "a+b"
+    "print(a+b)"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can cast from one type to another with the `int()` and `float()` functions.\n",
+    "You can **cast** from one type to another with the `int()` and `float()` functions.\n",
     "\n",
     "### Exercise\n",
     "What happens to a float when it's cast to an integer?  to a string?"
@@ -414,7 +414,7 @@
    "metadata": {},
    "source": [
     "### Strings, substrings, and slicing\n",
-    "Strings in python are stored as 'arrays of bytes' representing each charcater, which basically means that \"Hello\" is actually stored in python in something akin to a list: `[\"H\",\"e\",\"l\",\"l\",\"o\"]`.  So we can access, edit, and manipulate different parts of a string (or any other array) by 'slicing' with square brackets. Its important to recognize when doing this that python is a '0-indexed' language which means that any time you count in python, you always start with 0. Lets see how this works in practice:"
+    "Strings in python are stored as 'arrays of bytes' representing each charcater, which basically means that \"Hello\" is actually stored in python in something akin to a list: `[\"H\",\"e\",\"l\",\"l\",\"o\"]`.  So we can access, edit, and manipulate different parts of a string (or any other array) by 'slicing' with square brackets. Its important to recognize when doing this that python is a *'0-indexed'* language which means that any time you count in python, the _first_ element will always start with 0. Lets see how this works in practice:"
    ]
   },
   {
@@ -424,8 +424,15 @@
    "outputs": [],
    "source": [
     "# Create a string literal and store in a variable\n",
-    "a = \"Genomics is fun\"\n",
-    "\n",
+    "a = \"Genomics is fun\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# To retrieve the second character in this string we will slice as so\n",
     "print(a[1])\n",
     "\n",
@@ -451,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slicing is a fundamental concept in python for accessing any set of elements in an array (not just strings). You will use this often."
+    "_**Note: Slicing is a fundamental concept in python for accessing any set of elements in an array (not just strings). You will use this often.**_"
    ]
   },
   {
@@ -490,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also test for instances of a substring within a string (note the use of a new syntax here that we will explore later)"
+    "You can also test for instances of a substring within a string. Note the use of a new syntax (_in_) here which we will explore in more detail later)"
    ]
   },
   {
@@ -515,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can combine strings directly (concatenate) using the `+` operator as we discussed above:"
+    "You can combine strings (concatenate) using the `+` operator as we discussed above:"
    ]
   },
   {
@@ -536,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whoops...we may want to format this a bit better to add a separator. Fortunately, python provides a convenient way to format strings called 'f-strings'. Simply add the variables in a new string and enclose them with curly braces `{}`."
+    "Whoops...we may want to format this a bit better to add a separator. Fortunately, python provides a convenient way to format strings called '_f-strings_'. Simply add the variables in a new string and enclose them with curly braces `{}`."
    ]
   },
   {
@@ -762,19 +769,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Gapdh', 'Sox10', 'Cxcl1', 'Msi1', 'Foxp1']\n",
-      "['Gapdh', 'Sox10', 'Cxcl1', 'Msi1']\n",
-      "['Cxcl1', 'Gapdh', 'Msi1', 'Sox10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genes.remove('Mef2c') # removes a 'specific' item\n",
     "print(genes)\n",
@@ -920,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To access elements of a dictionary, you do so in a manner similar to other collection items (`[]`), but you must specify a 'key' value instead of a positional index."
+    "To access elements of a dictionary, you do so in a manner similar to other collection items (`[]`), but you must specify a 'key' instead of a positional index to return the value."
    ]
   },
   {
@@ -936,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries are mutable so you can change/assign values in the same way"
+    "Dictionaries **are** mutable so you can change/assign values in the same way"
    ]
   },
   {
@@ -1017,25 +1014,16 @@
    "metadata": {},
    "source": [
     "#### Exercise\n",
-    "1. Given the dictionary below, write a script to return the keys in (sorted) alphanumeric order.\n",
+    "1. Given the dictionary below, write a few lines of python code to return the keys in (sorted) alphanumeric order.\n",
     "\n",
     "2. Do the same but for the values in the dictionary instead of the keys.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sydf', 'javd', 'sfoj', 'ihes', 'agsj', 'bhds']\n",
-      "['agsj', 'bhds', 'ihes', 'javd', 'sfoj', 'sydf']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myDict = {'sydf': 124,\n",
     "          'javd': 8927,\n",
@@ -1044,7 +1032,8 @@
     "          'agsj': 682,\n",
     "          'bhds': 257\n",
     "         }\n",
-    "\n"
+    "\n",
+    "# Code Below...\n"
    ]
   },
   {
@@ -1347,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
