Updates to day2 assignments -- Final

--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -137,14 +137,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7770f42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "58f31c82",
    "metadata": {},
@@ -185,6 +177,71 @@
    "id": "dcf71e20",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14e581e1-b301-4ab9-8ee8-f2dccbd4f77d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Bonus Problem\n",
+    "\n",
+    "5. Write a function that takes a DNA sequence as an argument and:\n",
+    "    * a) Checks to make sure that the DNA sequence uses only appropriate nucleotides\n",
+    "    * b) Returns a tuple containing the GC content, length, and reverse complement sequence of the input DNA molecule\n",
+    "    \n",
+    "**Hint:** _you can define functions for each of the requested properties and another function to create/organize the output_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "339c6aad-b7f6-4989-a44b-fb14a1f6da39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_DNA():\n",
+    "    # Test whether a given sequence is a valid DNA sequence.\n",
+    "\n",
+    "def calc_GC():\n",
+    "    # Calculate the GC percent of a DNA sequence\n",
+    "\n",
+    "def revcomp():\n",
+    "    # Takes a DNA sequence and returns the reverse complement\n",
+    "    \n",
+    "def main():\n",
+    "    # Your 'main' function to take an input sequence and process as described above\n",
+    "    \n",
+    "test_seq = 'CAGTACGATCTTGACGGTACG'\n",
+    "print(main(test_seq))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9a32675-3c1b-4f05-ae71-301c0aad6d4c",
+   "metadata": {},
+   "source": [
+    "c) Apply your function(s) to calculate the above parameters of interest (b) for the following of sequences."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee214c22-ed58-454d-bb56-e7198d6ada40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dna_seqs=[\n",
+    "    'TTATCAGCGGATTATTAGGTATAGTGCTATGC',\n",
+    "    'CGAGATTAGCGATTTGTG',\n",
+    "    'GGTATACTCTGCACGACGAGCGAGCGACGGACGACGGCICGATCTATCTA'\n",
+    "    'ACGTACGTACGTACGTACGTACGTACGTACGTACGT',\n",
+    "    'tacgagctactgagcgatcggatcgtacgtagc',\n",
+    "    'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n",
+    "    'GGCTTAATATCGAGCTAGTAGTCTATTCTAGCGAGCGACTATTCGACTATCGATGCTATCTGCGCAGCGAGCATCGAGCGCTATCGAGCTAGCTAGCTAGCTATCATCGAGCTACTAGCATCTGATTATTCTTTAGCGCGACGACT'\n",
+    "]\n"
+   ]
   }
  ],
  "metadata": {
@@ -206,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
