--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,15 +593,20 @@
     "    'TAC':'Y', 'TAT':'Y', 'TAA':'_', 'TAG':'_',\n",
     "    'TGC':'C', 'TGT':'C', 'TGA':'_', 'TGG':'W'}\n",
     "\n",
+    "# First let's write a function to return the amino acid associated with a given codon.\n",
+    "def lookup_AA(codon):\n",
+    "    aa = gencode.get(codon, 'X')\n",
+    "    return(aa)\n",
+    "\n",
     "# Let's dissect this function here to see what's going on and then we can make a reuseable script out of this\n",
     "def translate_dna(dna):\n",
     "    last_codon_start = len(dna) - 2\n",
     "    protein = \"\"\n",
     "    for start in range(0,last_codon_start,3):\n",
     "        codon = dna[start:start+3]\n",
-    "        aa = gencode.get(codon, 'X')\n",
+    "        aa = lookup_AA(codon)\n",
     "        protein = protein + aa\n",
-    "    return protein\n"
+    "    return(protein)\n"
    ]
   },
   {
