--- a/day3/notebooks/analyzing.ipynb
+++ b/day3/notebooks/analyzing.ipynb
@@ -16,28 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting package metadata (current_repodata.json): done\n",
-      "Solving environment: done\n",
+      "Collecting package metadata (current_repodata.json): - ^C\n",
+      "failed\n",
       "\n",
-      "# All requested packages already installed.\n",
+      "CondaError: KeyboardInterrupt\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!conda install scikit-learn"
+    "!conda install scikit-learn -y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
