--- a/day5/assignments/lunchproblemset_2022.ipynb
+++ b/day5/assignments/lunchproblemset_2022.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Day 5 working lunch exercise\n"
+    "## Day 5 working lunch exercise\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "0.048813181729573614"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,145 +64,9 @@
     "2. You are tracking the growth of two bacterial strains over time. You notice that the two strains grow slightly differently, but what affect does strain have on the doubling time? To answer this, you will need to:\n",
     "a) Tidy the following dataset and plot growth of the two samples\n",
     "b) Fit a curve of exponential growth to the dataset\n",
-    "c) Use this curve to estimate growth rate and compare between the two. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>WT_0</th>\n",
-       "      <th>kd_0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.2010</td>\n",
-       "      <td>0.1922</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.2165</td>\n",
-       "      <td>0.1970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.2298</td>\n",
-       "      <td>0.2044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.2429</td>\n",
-       "      <td>0.2122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.2606</td>\n",
-       "      <td>0.2185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>1350.0</td>\n",
-       "      <td>0.5300</td>\n",
-       "      <td>0.4411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>1360.0</td>\n",
-       "      <td>0.5287</td>\n",
-       "      <td>0.4380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>1370.0</td>\n",
-       "      <td>0.5295</td>\n",
-       "      <td>0.4385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>1380.0</td>\n",
-       "      <td>0.5328</td>\n",
-       "      <td>0.4374</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>1390.0</td>\n",
-       "      <td>0.5276</td>\n",
-       "      <td>0.4383</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>140 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          t    WT_0    kd_0\n",
-       "1       0.0  0.2010  0.1922\n",
-       "2      10.0  0.2165  0.1970\n",
-       "3      20.0  0.2298  0.2044\n",
-       "4      30.0  0.2429  0.2122\n",
-       "5      40.0  0.2606  0.2185\n",
-       "..      ...     ...     ...\n",
-       "136  1350.0  0.5300  0.4411\n",
-       "137  1360.0  0.5287  0.4380\n",
-       "138  1370.0  0.5295  0.4385\n",
-       "139  1380.0  0.5328  0.4374\n",
-       "140  1390.0  0.5276  0.4383\n",
-       "\n",
-       "[140 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "#we loaded and tidied the data for you!\n",
-    "growthdata = pd.read_csv(\"../data/TECANgrowth.csv\", header=None)\n",
-    "growthdata = growthdata.transpose()\n",
-    "growthdata = growthdata[1:]\n",
-    "growthdata.columns = [\"t\", \"WT_0\",\"kd_0\"]\n",
-    "growthdata = growthdata.astype(float)\n",
-    "growthdata"
+    "c) Use this curve to estimate growth rate and compare between the two. \n",
+    "\n",
+    "Data is in the file `TECANgrowth.csv`"
    ]
   },
   {
@@ -211,18 +75,11 @@
    "source": [
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
