Updating day1 notebooks and assignments

--- a/day1/assignments/Day1_lunch_exercise.ipynb
+++ b/day1/assignments/Day1_lunch_exercise.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Print out (in the shell) the first 5 lines of the file"
+    "1. Print out (in the shell) the first 5 lines of the file. Copy/paste them into the cell below."
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. print file sizes rounded to a readable suffix (B, K, M etc) (hint: use the man page for ls!)\n"
+    "5. print file sizes rounded to a human-readable suffix (B, K, M etc) (hint: use the man page for ls!)\n"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. How many times does the word “ATATATAT” occur in the file? Hint: -o"
+    "7. get the first 10 lines of the file and save them to a new file called “first10lines.txt”. Copy/paste the command you used to do this below."
    ]
   },
   {
@@ -152,6 +152,20 @@
    "metadata": {},
    "source": [
     "9. What character (A, C, G, or T) is most common in tail.txt?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. How many lines in tail.txt contain the word “ATATATAT”?"
    ]
   },
   {
