More updates to day1

--- a/day1/assignments/Day1-Homework.ipynb
+++ b/day1/assignments/Day1-Homework.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "1. What syntax is used for “greater than” in bash scripting?\n",
-    "  <ol>\n",
+    "  <ol type=\"A\">\n",
     "    <li>-lt</li>\n",
     "    <li>-gt</li>\n",
     "    <li>-gte</li>\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "2. What components make up a conditional in bash scripting?\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>if, then, else, and endif\n",
     "    <li>if, then, else, and fi\n",
     "    <li>if, else, and fi\n",
@@ -69,9 +69,9 @@
    "metadata": {},
    "source": [
     "3. How do you read arguments in a bash (shell) program?\n",
-    "<ol>\n",
-    "    <li>\\$0 would be the first line argument, \\$1 would be the second command-line argument, \\$2 the third, and so on\n",
-    "    <li>\\$1 would be the first command-line argument, \\$2 the second, and so on \\$0 is the name of the script or function\n",
+    "<ol type=\"A\">\n",
+    "    <li>`$0` would be the first line argument, `$1` would be the second command-line argument, `$2` the third, and so on\n",
+    "    <li>`$1` would be the first command-line argument, `$2` the second, and so on `$0` is the name of the script or function\n",
     "    <li>Both a and b are correct\n",
     "    <li>Both a and b are incorrect\n",
     "</ol>"
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "4. To assign execute permission to the user (owner) for a file named file01.txt, which of the following command will be used?\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "<li>chmod u+r file01.txt\n",
     "<li>chmod u+w file01.txt\n",
     "<li>chmod u-x file01.txt\n",
@@ -113,7 +113,7 @@
    "metadata": {},
    "source": [
     "5. To check more than two conditions, ___ is used with if-else statements.\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>while\n",
     "    <li>for\n",
     "    <li>elif\n",
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "6. Every `if` is closed with a corresponding ____\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>else\n",
     "    <li>fi\n",
     "    <li>if\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "source": [
     "7. Which command can be used to remove a non-empty directory?\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>rmdir\n",
     "    <li>rd\n",
     "    <li>ddir\n",
@@ -179,7 +179,7 @@
    "metadata": {},
    "source": [
     "8. To check more than two conditions, ___ is used with if-else statements.\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>while\n",
     "    <li>for\n",
     "    <li>elif\n",
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "9. Suppose `x=10`, then what will be the value of `x$x`?\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>undefined\n",
     "    <li>erroneous\n",
     "    <li>100\n",
@@ -223,7 +223,7 @@
    "metadata": {},
    "source": [
     "10. What is command used to print the current working directory?\n",
-    "<ol>\n",
+    "<ol type=\"A\">\n",
     "    <li>popd\n",
     "    <li>dir\n",
     "    <li>pwd\n",
