--- a/day1/notebooks/Day1.2 - Afternoon - Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.2 - Afternoon - Unix_and_Bash.ipynb
@@ -118,23 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 3304\n",
-      "-rw-r--r--  1 loyalgoff  staff   1.1K Aug 27 20:57 Day1-overview.md\n",
-      "-rw-r--r--  1 loyalgoff  staff   994B Aug 27 20:57 Day1.0-Morning-Review_of_prereq_assignments.ipynb\n",
-      "-rw-r--r--  1 loyalgoff  staff   1.2M Aug 27 21:06 Day1.1-Morning-Unix_I.ipynb\n",
-      "-rw-r--r--  1 loyalgoff  staff   376K Aug 27 20:57 Day1.2-Morning-Intro_to_git_and_GitHub.ipynb\n",
-      "-rw-r--r--  1 loyalgoff  staff   8.6K Aug 27 21:41 Day1.3 - Afternoon - Unix_and_Bash.ipynb\n",
-      "drwxr-xr-x  3 loyalgoff  staff    96B Aug 27 20:57 data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "ls -lh"
@@ -244,11 +230,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practice exercises\n",
+    "## cut | sort | uniq\n",
     "\n",
-    "1. Write a script that uses grep, cut, sort, and uniq with pipes to print the number of genes in hg38genes.txt annotated on each chromosome on the plus strand and the number of genes on the minus strand, for chromosomes 14, 15, 16, and 17.\n",
+    "### `cut` - remove sections from each line of files\n",
+    "cut can grab columns of data from a delimited (in this case tab-delimited) \n",
     "\n",
-    "2. Write a script that accepts terminal input and that will count the number of genes on the chromosome specified. The input should be only numerical, so your program will need to prepend the string chr. Be sure to use the -w option with grep so that chr1 really does only retrieve chr1 and not chr10, chr11 etc."
+    "```\n",
+    "$ man cut\n",
+    "\n",
+    "$ cut -f1 data/hg38genes.txt\n",
+    "\n",
+    "# cut -f2,3 data/hg38genes.txt\n",
+    "```\n",
+    "\n",
+    "### `sort` - sort or merge records (lines) of text and binary files\n",
+    "We can combine the power of `cut` with another command-line tool, `sort` by using the pipe (`|`) operator.\n",
+    "\n",
+    "```\n",
+    "# sort all chromosomes\n",
+    "$ cut -f1 data/hg38genes.txt | sort \n",
+    "\n",
+    "# sort all start positions\n",
+    "$ cut -f2 data/hg38genes.txt | sort\n",
+    "```\n",
+    "^ What happened here? let's `man sort` to see if we can figure out a solution.\n",
+    "\n",
+    "### `uniq` - report or filter out repeated lines in a file\n",
+    "As it's name implies, `uniq` will take the input provided and collapse it to the unique set of rows.\n",
+    "When combined with `cut` and `sort` this can be a very handy set of tools for summarizing tabular data in files.\n",
+    "\n",
+    "```\n",
+    "#Find unique chromosome names\n",
+    "$ cut -f1 data/hg38genes.txt | sort | uniq\n",
+    "```\n",
+    "What if we added the argument `-c` to `uniq`? (hint: `man uniq` for answer)\n",
+    "\n",
+    "#### Exercises:\n",
+    "Using the combination of `cut | sort | uniq`, find:\n",
+    "\n",
+    "1. How many genes are on each strand ('+', '-') in the file hg38genes.txt?\n",
+    "\n",
+    "2. How many genes are on each strand, for each chromosome?\n",
+    "\n",
+    "3. Write a script that accepts terminal input and that will count the number of genes on the chromosome specified. The input should be only numerical, so your program will need to prepend the string chr. Be sure to use the -w option with grep so that chr1 really does only retrieve chr1 and not chr10, chr11 etc.\n",
+    "\n"
    ]
   },
   {
@@ -270,7 +295,7 @@
     "done\n",
     "```\n",
     "\n",
-    "NOTE that the test evaluation  [  is actually a program! so you need spaces before and after the square bracket. Possible tests for integers include -eq, -lt, -gt, -le, -ge. Strings can be compared with = and != . Lots of other tests are possible.\n"
+    "NOTE that the test evaluation  `[`  is actually a program! so you need spaces before and after the square bracket. Possible tests for integers include -eq, -lt, -gt, -le, -ge. Strings can be compared with = and != . Lots of other tests are possible.\n"
    ]
   },
   {
@@ -369,54 +394,6 @@
     "done < $file\n",
     "```\n",
     "Let's deconstruct what's actually happening in this script.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## cut | sort | uniq\n",
-    "\n",
-    "### `cut` - remove sections from each line of files\n",
-    "cut can grab columns of data from a delimited (in this case tab-delimited) \n",
-    "\n",
-    "```\n",
-    "$ man cut\n",
-    "\n",
-    "$ cut -f1 data/hg38genes.txt\n",
-    "\n",
-    "# cut -f2,3 data/hg38genes.txt\n",
-    "```\n",
-    "\n",
-    "### `sort` - sort or merge records (lines) of text and binary files\n",
-    "We can combine the power of `cut` with another command-line tool, `sort` by using the pipe (`|`) operator.\n",
-    "\n",
-    "```\n",
-    "# sort all chromosomes\n",
-    "$ cut -f1 data/hg38genes.txt | sort \n",
-    "\n",
-    "# sort all start positions\n",
-    "$ cut -f2 data/hg38genes.txt | sort\n",
-    "```\n",
-    "^ What happened here? let's `man sort` to see if we can figure out a solution.\n",
-    "\n",
-    "### `uniq` - report or filter out repeated lines in a file\n",
-    "As it's name implies, `uniq` will take the input provided and collapse it to the unique set of rows.\n",
-    "When combined with `cut` and `sort` this can be a very handy set of tools for summarizing tabular data in files.\n",
-    "\n",
-    "```\n",
-    "#Find unique chromosome names\n",
-    "$ cut -f1 data/hg38genes.txt | sort | uniq\n",
-    "```\n",
-    "What if we added the argument `-c` to `uniq`? (hint: `man uniq` for answer)\n",
-    "\n",
-    "#### Exercises:\n",
-    "Using the combination of `cut | sort | uniq`, find:\n",
-    "\n",
-    "1. How many genes are on each strand ('+', '-') in the file hg38genes.txt?\n",
-    "\n",
-    "2. How many genes are on each strand, for each chromosome?\n",
-    "\n"
    ]
   },
   {
