Updates to day2 notebooks

--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -44,8 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The python shell\n",
-    "The python shell, similar to the bash shell, allows us to use python in an interactive manner. You enter in one command at a time and the result is immediately returned.  The python shell can be called directly from the terminal with the command `python`"
+    "### The python console\n",
+    "The python console, similar to the bash shell, allows us to use python in an interactive manner. You enter in one command at a time and the result is immediately returned.  The python shell can be called directly from the terminal with the command `python`"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IPython Notebooks\n",
+    "### IPython (Jupyter) Notebooks\n",
     "Another way in which we can use python is how we are doing so here, in interaction iPython Notebooks. (Brief re-intro to navigating notebooks as needed)."
    ]
   },
@@ -582,6 +582,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Strings have many other methods that can be used to manipulate them.  You can find a list of them here: https://www.w3schools.com/python/python_ref_string.asp\n",
+    "\n",
+    "For example, we can search for a substring within a string and replace it with another substring:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myProtein='MTEITAAMVKELRESTGAGMMDCKNALSETNGDFDKAVQLLREKGLGKAAKKADRLAAEG'\n",
+    "\n",
+    "# Does the protein contain a motif of interest?\n",
+    "motif_1 = 'SETNGD'\n",
+    "motif_2 = 'QKNAL'\n",
+    "\n",
+    "# Boolean test to see if the motif is in the protein\n",
+    "print(motif_1 in myProtein)\n",
+    "print(motif_2 in myProtein)\n",
+    "\n",
+    "# Count the number of times the motif occurs in the protein\n",
+    "\n",
+    "# Find the position of the motif in the protein\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are a number of methods for manipulating/searching/testing strings that are built in to python. Feel free to [check them out](https://docs.python.org/2.5/lib/string-methods.html) and test them on your own."
    ]
   },
@@ -631,7 +662,7 @@
    "metadata": {},
    "source": [
     "#### Exercise\n",
-    "Create variables containing your first name, middle initial, last name, _age_, and one favorite thing. Construct and print an ouput string that creates a short sentence describing you that contains your full name, _calculated birth year_, and something you like!"
+    "1. Create variables containing your first name, middle initial, last name, _age_, and one favorite thing. Construct and print an ouput string that creates a short sentence describing you that contains your full name, _calculated birth year_, and something you like!"
    ]
   },
   {
@@ -1336,7 +1367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
